--- a/fcfs.html
+++ b/fcfs.html
@@ -223,6 +223,31 @@
                 </div>
             </div>
         </div>
+
+        <!-- Card 3: Algorithm Explanation -->
+        <div class="bg-white/90 backdrop-blur-sm rounded-lg shadow-lg p-6 mb-6">
+            <h2 class="text-2xl font-bold mb-4">FCFS Algorithm</h2>
+            <p class="text-sm text-gray-700 mb-3">First-Come, First-Served (non-preemptive) - processes are scheduled in order of arrival.</p>
+            <pre class="whitespace-pre-wrap bg-gray-100 p-4 rounded text-sm overflow-auto"><code>/* FCFS pseudocode */
+function calculateFCFS(processes) {
+  // Sort by arrival time
+  let sorted = processes.slice().sort((a,b) => a.at - b.at);
+  let currentTime = 0;
+  let results = [];
+
+  for (let p of sorted) {
+    if (currentTime < p.at) currentTime = p.at; // idle until arrival
+    p.start = currentTime;
+    currentTime += p.bt;
+    p.ct = currentTime;
+    p.tat = p.ct - p.at; // turnaround time
+    p.wt = p.tat - p.bt; // waiting time
+    results.push(p);
+  }
+
+  return results;
+}</code></pre>
+        </div>
     </div>
 
     <script>
