--- a/multilevel.html
+++ b/multilevel.html
@@ -207,6 +207,52 @@
                 </div>
             </div>
         </div>
+
+        <!-- Card 3: Algorithm Explanation -->
+        <div class="bg-white/90 backdrop-blur-sm rounded-lg shadow-lg p-6 mb-6">
+            <h2 class="text-2xl font-bold mb-4">Multilevel Queue Scheduling Algorithm</h2>
+            <p class="text-sm text-gray-700 mb-3">Multilevel Queue - processes are divided into multiple queues based on priority. Each queue uses a different scheduling algorithm (e.g., Queue 1 & 2 use RR, Queue 3 uses FCFS).</p>
+            <pre class="whitespace-pre-wrap bg-gray-100 p-4 rounded text-sm overflow-auto"><code>/* Multilevel Queue pseudocode */
+function calculateMultilevelQueue(processes) {
+  // Partition processes by priority
+  let queue1 = processes.filter(p => p.priority === 1); // highest
+  let queue2 = processes.filter(p => p.priority === 2); // medium
+  let queue3 = processes.filter(p => p.priority >= 3);  // lowest
+  
+  let results = [];
+  let gantt = [];
+  let currentTime = 0;
+  
+  // Queue 1: Round Robin with quantum=2
+  executeRR(queue1, 2);
+  
+  // Queue 2: Round Robin with quantum=4
+  executeRR(queue2, 4);
+  
+  // Queue 3: FCFS
+  executeFCFS(queue3);
+  
+  function executeRR(queue, quantum) {
+    queue.sort((a,b) => a.at - b.at);
+    let readyQueue = [];
+    let i = 0;
+    // ... (see Round Robin logic)
+  }
+  
+  function executeFCFS(queue) {
+    queue.sort((a,b) => a.at - b.at);
+    for (let p of queue) {
+      if (currentTime < p.at) currentTime = p.at;
+      const start = currentTime;
+      currentTime += p.bt;
+      gantt.push({ pid: p.pid, start, end: currentTime });
+      results.push({ ...p, ct: currentTime, tat: currentTime - p.at, wt: currentTime - p.at - p.bt });
+    }
+  }
+  
+  return { results, gantt };
+}</code></pre>
+        </div>
     </div>
     <script>
         let processCount = 3;
