--- a/sjf.html
+++ b/sjf.html
@@ -219,6 +219,48 @@
                 </div>
             </div>
         </div>
+
+        <!-- Card 3: Algorithm Explanation -->
+        <div class="bg-white/90 backdrop-blur-sm rounded-lg shadow-lg p-6 mb-6">
+            <h2 class="text-2xl font-bold mb-4">SJF Algorithm (Non-preemptive)</h2>
+            <p class="text-sm text-gray-700 mb-3">Shortest Job First (non-preemptive) - select the available process with the smallest burst time.</p>
+            <pre class="whitespace-pre-wrap bg-gray-100 p-4 rounded text-sm overflow-auto"><code>/* SJF pseudocode */
+function calculateSJF(processes) {
+  let pending = processes.slice();
+  let currentTime = 0;
+  let completed = [];
+  let gantt = [];
+
+  while (pending.length > 0) {
+    // find processes that have arrived
+    let available = pending.filter(p => p.at <= currentTime);
+
+    // if nothing is available, jump to the next arrival
+    if (available.length === 0) {
+      currentTime = Math.min(...pending.map(p => p.at));
+      continue;
+    }
+
+    // pick the one with smallest burst time
+    available.sort((a,b) => a.bt - b.bt);
+    let p = available[0];
+
+    // execute p to completion
+    const start = currentTime;
+    currentTime += p.bt;
+    p.ct = currentTime;
+    p.tat = p.ct - p.at;
+    p.wt = p.tat - p.bt;
+    gantt.push({ pid: p.pid, start: start, end: currentTime });
+
+    // remove from pending and mark completed
+    pending.splice(pending.indexOf(p), 1);
+    completed.push(p);
+  }
+
+  return { results: completed, gantt };
+}</code></pre>
+        </div>
     </div>
 
     <script>
