--- a/srtf.html
+++ b/srtf.html
@@ -198,6 +198,68 @@
                 </div>
             </div>
         </div>
+
+        <!-- Card 3: Algorithm Explanation -->
+        <div class="bg-white/90 backdrop-blur-sm rounded-lg shadow-lg p-6 mb-6">
+            <h2 class="text-2xl font-bold mb-4">SRTF Algorithm (Preemptive SJF)</h2>
+            <p class="text-sm text-gray-700 mb-3">Shortest Remaining Time First (preemptive) - at each time unit, select the process with the smallest remaining burst time.</p>
+            <pre class="whitespace-pre-wrap bg-gray-100 p-4 rounded text-sm overflow-auto"><code>/* SRTF pseudocode */
+function calculateSRTF(processes) {
+  let proc = processes.map(p => ({...p, remainingTime: p.bt}));
+  let currentTime = 0;
+  let completed = 0;
+  let results = [];
+  let gantt = [];
+  let lastPid = null;
+
+  while (completed < proc.length) {
+    // find available processes
+    let available = proc.filter(p => p.at <= currentTime && p.remainingTime > 0);
+
+    if (available.length === 0) {
+      // idle - jump to next arrival
+      currentTime++;
+      continue;
+    }
+
+    // pick process with shortest remaining time
+    available.sort((a,b) => a.remainingTime - b.remainingTime);
+    let p = available[0];
+
+    // record Gantt block start (if switching process)
+    if (p.pid !== lastPid) {
+      if (gantt.length > 0 && gantt[gantt.length-1].end === currentTime) {
+        // continue previous block
+      } else {
+        gantt.push({ pid: p.pid, start: currentTime, end: currentTime + 1 });
+      }
+      lastPid = p.pid;
+    } else {
+      // extend current block
+      gantt[gantt.length - 1].end++;
+    }
+
+    // execute for 1 time unit
+    p.remainingTime--;
+    currentTime++;
+
+    // if finished
+    if (p.remainingTime === 0) {
+      completed++;
+      results.push({
+        pid: p.pid,
+        at: p.at,
+        bt: p.bt,
+        ct: currentTime,
+        tat: currentTime - p.at,
+        wt: currentTime - p.at - p.bt
+      });
+    }
+  }
+
+  return { results, gantt };
+}</code></pre>
+        </div>
     </div>
 
     <script>
